Após o pc do Ricardo ligar