@@ -1,5 +1,9 @@
 package blackjack;
 
+import java.text.DecimalFormat;
+
+// TODO : put shoe here
+
 public class Game {
 	
 	private GameMode mode;
@@ -15,7 +19,12 @@ public class Game {
 	private Player player;
 	private Dealer dealer;
 	
-	// Interative && Simulation
+	private Stats dStats;
+	private Stats pStats;
+	
+	private Ace5 bet_strat;
+	
+	// Interactive && Simulation Modes
 	public Game(char Mode_in, int minBet_in, int maxBet_in, int balance_in, int nDecks_in, int intShuffle_in, int sNumber_in, String strategy_in) {
 		if (Mode_in == 'i')
 			mode = new Interative();
@@ -30,11 +39,16 @@ public class Game {
 		
 		player = new Player(minBet, balance_in);
 		dealer = new Dealer(nDecks_in);
+		
+		dStats = new Stats();
+		pStats = new PlayerStats(balance_in);
+		
+		bet_strat = new Ace5(minBet, maxBet);
 	}
 
-	// Debug
+	// Debug Mode
 	public Game(char Mode_in, int minBet_in, int maxBet_in, int balance_in, String shoeFile_in, String cmdFile_in) {
-		mode = new Debug(shoeFile_in, cmdFile_in);
+		mode = new Debug(cmdFile_in);
 		minBet = minBet_in;
 		maxBet = maxBet_in;
 	
@@ -42,38 +56,37 @@ public class Game {
 
 		player = new Player(minBet, balance_in);
 		dealer = new Dealer(shoeFile_in);
+		
+		dStats = new Stats();
+		pStats = new PlayerStats(balance_in);
 	}
 
-	// RICARDO - Se no iníco de cada jogada o valor do intShuffle for atingido, fazer shuffle
-	// Oki. Deixa-apara nããme esquecer
-	
 	public void play() {
-		// Wait for player bet (command b <bet_value>)
-		// 		If any other command comes, ignore it or print an error or...
-		// User bets: ready to deal (flag)
-		// Wait for d command
-		// Call deal();
+				
 		while(true) {
-			// reset hands and stuff
+			
 			player.clearHands();
 			dealer.clearHand();
-			if(dealer.shoe.getNDealtCards() >= Math.ceil(intShuffle/100.0f * nDecks * 52)) {
+			/* Shuffle if the number of dealt cards surpassed the intShuffle threshold,
+			* unless the program is running on Debug Mode */
+			if(!(mode instanceof Debug) && dealer.shoe.getNDealtCards() >= Math.ceil(intShuffle/100.0f * nDecks * 52)) {
 				shuffling = true;
 			}
 			if(shuffling) {
-				// Shuffle shoe; Either do it through dealer (dealer needs to have a shuffle method)
-				// or Game has to have a shoe object;
 				System.out.println("shuffling the shoe...");
 				dealer.shuffle();
 				shuffling = false;
-
 			}
+			/* Gets a command from a source, either the command line, a file or the simulator 
+			 * Valid commands at this stage: b [<value>] and d, in this order;
+			 * isReady flags that a "d" command should be issued; no more "b" commands are accepted.*/
 			String s = mode.getCommand();
+			if(s.isBlank()) continue; // Command in a bad format; "\0" was returned;
 			String[] toks = s.split(" ", 0);
 			if(toks[0].charAt(0) == 'b') {
-				if(isReady) {
+				if(isReady)
 					System.out.println(s + ": illegal command");
-				} else {
+				else {
 					int bet = (toks.length == 1) ? minBet : Integer.parseInt(toks[1]);
 					if (bet < minBet || bet > maxBet) {
 						System.out.println(s + ": illegal command");
@@ -91,50 +104,41 @@ public class Game {
 					System.out.println(toks[0] + ": illegal command");
 				}
 			} else if(toks[0].charAt(0) == '$') {
-				System.out.println("Player's current balance is " + player.getBalance());		
+				System.out.println("Player's current balance is " + player.getBalance());
+			} else if(toks[0].charAt(0) == 't') {
+//				System.out.println("#### DEBUG ####");
+//				System.out.println("D Hands: " + dStats.handsPlayed + " D BJs: " + dStats.blackjacks);
+//				System.out.println("P Hands: " + pStats.handsPlayed + " P BJs: " + pStats.blackjacks);
+				DecimalFormat df = new DecimalFormat("#.##");
+				System.out.println("BJ P/D \t" + df.format(pStats.getBJavg())+ " / " + df.format(dStats.getBJavg()));
+				System.out.println("Win  \t" + df.format(((PlayerStats) pStats).getWLPavg(1)));
+				System.out.println("Lose \t" + df.format(((PlayerStats) pStats).getWLPavg(-1)));
+				System.out.println("Push \t" + df.format(((PlayerStats) pStats).getWLPavg(0)));
+				System.out.println("Balance\t" + player.getBalance() + " / " + 
+						df.format(((PlayerStats) pStats).percentageOfGain(player.getBalance())));
+					
 			} else if(toks[0].charAt(0) == 'q') {
 				System.out.println("bye");
 				System.exit(0);				
 			} else
-				continue;			
+				System.out.println(s + ": illegal command");
 		}
-	}
-	
-	
-	public char getCommand(String line) {
-		if (line.length() <= 2) {
-			if (line.equals("h"))
-				return 'h';
-			else if (line.equals("s"))
-				return 's';
-			else if (line.equals("i"))
-				return 'i';
-			else if (line.equals("u"))
-				return 'u';
-			else if (line.equals("p"))
-				return 'p';
-			else if (line.equals("2"))
-				return '2';
-			else if (line.equals("ad"))
-				return 'a';
-			else if (line.equals("st"))
-				return 't';
-			else if (line.equals("$"))
-				return '$';
-			else if (line.equals("q"))
-				return 'q';
-		}
-		return '\0';
 	}
 	
 	public void deal() { // for 1 player; try to generalize later
 		// dealer deals cards to all players
 		for(int i = 0; i < 2; ++i) {
-			player.addCard(0, dealer.dealCards());
+			Card c = dealer.dealCards();
+			bet_strat.updateCount(c);;
+			player.addCard(0, c);
 		}
+		pStats.incHandsPlayed();
 		for(int i = 0; i < 2; ++i) {
-			dealer.addCard(dealer.dealCards());
+			Card c = dealer.dealCards();
+			bet_strat.updateCount(c);;
+			dealer.addCard(c);
 		}
+		dStats.incHandsPlayed();
 		dealer.printDealersHand();
 		player.printPlayersHand(-1);
 		
@@ -146,6 +150,11 @@ public class Game {
 		for(int i = 0; i < player.getNHands(); ++i) {
 			print_index = -1;
 			hand_index = "";
+			if(player.hands.get(i).isSplit() && player.hands.get(i).getNCards() == 1) {
+				Card c = dealer.dealCards();
+				bet_strat.updateCount(c);;
+				player.addCard(i, c);
+			}
 			// If the player has more than one hand (already splitted)
 			if(player.getNHands() > 1) {
 				print_index = i;
@@ -160,13 +169,13 @@ public class Game {
 					System.out.println("playing 4th hand...");
 				player.printPlayersHand(print_index);
 			}
-
 			
 			while(true) {
 				line = mode.getCommand(); // get command from console or file
-				char cmd = getCommand(line);
+				if(line.isBlank()) continue;
+				char cmd = line.charAt(0);
 				if(cmd == 'h') {
-					if (player.hands.get(i).isBust() || player.hands.get(i).isStanding() || player.hands.get(i).isSurrender() || (player.hands.get(i).isDouble() && (player.hands.get(i).getNCards() >= 3)) || (player.hands.get(i).isSplit() && (player.hands.get(i).getNCards() >= 2) && (player.hands.get(i).cards.get(0).getValue().equals("A"))))
+					if (player.hands.get(i).isBust() || player.hands.get(i).isStanding() || player.hands.get(i).isSurrender() || (player.hands.get(i).isDouble() && (player.hands.get(i).getNCards() >= 3)) || (player.hands.get(i).isSplit() && (player.hands.get(i).getNCards() >= 2) && (player.hands.get(i).getFirst().getValue().equals("A"))))
 						System.out.println(line + ": illegal command");
 					else
 						player.hit(i);
@@ -174,9 +183,12 @@ public class Game {
 				else if(cmd == 's') {
 					player.stand(i);
 				} 
-				else if(cmd == 'i') { // TODO
-					if (player.hands.get(i).isOpening())
+				else if(cmd == 'i') {
+					if (player.hands.get(i).isOpening() && dealer.hand.getFirst().getValue().equals("A") &&
+							!player.isInsuring()) {
+						player.insurance();
 						System.out.println("player is insuring");
+					}
 					else
 						System.out.println(line + ": illegal command");
 				}
@@ -211,7 +223,9 @@ public class Game {
 		
 				if(player.isHittingHand(i)) { // isto devia ser uma flag do player ou da hand? Se calhar player, mas está na hand
 					if(!player.isDoubleDHand(i)) System.out.println("player hits");
-					player.addCard(i, dealer.dealCards());
+					Card c = dealer.dealCards();
+					bet_strat.updateCount(c);;
+					player.addCard(i, c);
 					player.printPlayersHand(print_index);
 					player.hands.get(i).setHitting(false); // make this a player method
 					if(player.hands.get(i).isBust()) {
@@ -229,83 +243,16 @@ public class Game {
 					System.out.println("player is surrendering");
 					break;
 				} else if(player.isSplitting()) {
+					pStats.incHandsPlayed();
 					System.out.println("player is splitting");
 					player.split(i);
-					player.addCard(i, dealer.dealCards());
-					player.addCard(i+1, dealer.dealCards());
+					Card c = dealer.dealCards();
+					bet_strat.updateCount(c);;
+					player.addCard(i, c);
+//					player.addCard(i+1, dealer.dealCards());
 					i--;
 					break;
 				}
-				
-//				if(cmd == 'h') {
-//					if (player.hands.get(i).isBust() || player.hands.get(i).isStanding() || player.hands.get(i).isSurrender() || (player.hands.get(i).isDouble() && (player.hands.get(i).getNCards() >= 3)) || (player.hands.get(i).isSplit() && (player.hands.get(i).getNCards() >= 2) && (player.hands.get(i).cards.get(0).getValue().equals("A"))))
-//						System.out.println(line + ": illegal command");
-//					else {
-//						System.out.println("player hits");
-//						player.hit(i);
-//						player.addCard(i, dealer.dealCards());
-//						player.printPlayersHand(print_index);
-//						if(player.hands.get(i).isBust()) {
-//							System.out.println("player busts" + hand_index);
-//							break;
-//						}						
-//					}
-//				} 
-//				else if(cmd == 's') {
-//					player.stand(i);
-//					System.out.println("player stands" + hand_index);
-//					break;						
-//				} 
-//				else if(cmd == 'i') {
-//					if (player.hands.get(i).isOpening()) {
-//						System.out.println("player is insuring");
-//					}
-//					else {
-//						System.out.println(line + ": illegal command");
-//					}
-//				} 
-//				else if(cmd == 'u') {
-//					if (player.hands.get(i).getNCards()==2) {
-//						player.surrender(i);
-//						System.out.println("player is surrendering");
-//						break;
-//					}
-//					else {
-//						System.out.println(line + ": illegal command");
-//					}
-//				} 
-//				else if(cmd == 'p') {
-//					if (player.hands.get(i).isPair() && (player.getNHands() <= 3)) {
-//						player.split(i);
-//						System.out.println("player is splitting");
-//						player.addCard(i, dealer.dealCards());
-//						player.addCard(i+1, dealer.dealCards());
-//						i--;
-//						break;
-//					}
-//					else {
-//						System.out.println(line + ": illegal command");
-//					}
-//				} 
-//				else if(cmd == '2') {
-//					if (player.hands.get(i).getNCards() == 2 && player.hands.get(i).getValue()>8 && player.hands.get(i).getValue()<12) {
-//						player.doubleD(i);
-//					}
-//					else {
-//						System.out.println(line + ": illegal command");
-//					}						
-//				} 
-//				else if(cmd == 'a') {
-//					
-//				} else if(cmd == 't') {
-//					
-//				} else if(cmd == '$') {
-//					System.out.println("Player's current balance is " + player.getBalance());
-//				} else if(cmd == 'q') {
-//					System.out.println("bye");
-//					System.exit(0);
-//				} else
-//					System.out.println(line + ": illegal command");
 			}
 		}
 		// Dealer's turn
@@ -321,7 +268,7 @@ public class Game {
 				dealer.hit();
 				System.out.println("dealer hits");
 			} else {
-				dealer.stand();
+//				dealer.stand();
 				System.out.println("dealer stands");
 				break;
 			}
@@ -335,19 +282,24 @@ public class Game {
 					System.out.println("blackjack!!");
 					break;
 				}
+		if (dealer.hand.checkBlackjack()) dStats.incBlackjacks();
 
 			
 		for(int i = 0; i < player.getNHands(); ++i) {
+			if (player.hands.get(i).checkBlackjack()) pStats.incBlackjacks();
 			float mult = 1;
 			int bet =  player.hands.get(i).getBet();
 			String res_str = new String();
-
+			if(player.isInsuring() && dealer.hand.checkBlackjack())
+				player.updateBalance(2*bet);
 			if(player.hands.get(i).isSurrender()) {
+				((PlayerStats) pStats).incWLP(-1);
 				player.updateBalance(0.5f*bet);
 				System.out.println("Player's current balance is " + player.getBalance());
 			}
 			else {
 				int res = result(i);
+				((PlayerStats) pStats).incWLP(res);
 				if(res != 0) {
 					if(res == -1) {
 						mult = 0;
@@ -365,9 +317,9 @@ public class Game {
 				
 				hand_index = "";
 				if(player.getNHands() > 1)
-					hand_index = "[" + (i+1) + "]";
+					hand_index = " [" + (i+1) + "]";
 				
-				System.out.println("Player " + res_str + " " + hand_index + " and his current balance is " + player.getBalance());
+				System.out.println("Player " + res_str + hand_index + " and his current balance is " + player.getBalance());
 			}
 		}
 		System.out.println();
@@ -379,7 +331,7 @@ public class Game {
 		if(dealer.hand.isBust()) return 1;
 		if (player.hands.get(i).checkBlackjack())
 			return dealer.hand.checkBlackjack() ? 0 : 1;
-		else if (dealer.hand.checkBlackjack())
+		else if (dealer.hand.checkBlackjack()) 
 			return -1;
 		int playerScore = player.hands.get(i).getValue();
 		int dealerScore = dealer.hand.getValue();
@@ -407,9 +359,8 @@ public class Game {
 			System.out.println("Incorrect arguments");
 			System.exit(0);			
 		}
-		while(true) {
-			game.play();
-		}
+		
+		game.play();
 	}
 	
 
